# dockapps

./: .gitignore  .travis.yml  BUGS  CNAME  ChangeLog  FAQ.php  Gemfile  INSTALL  Makefile.in  NEWS  README  README.gai  README.md  TODO  _config.yml  aclocal.m4  chap1.php  chap2.php  chap3.php  chap4.php  chap5.php  chap6.php  chap7.php  configure  configure.in  dev.php  dock.php  dockapps.db.in  docs.html  docs.php  features.html  features.md  features.php  fulldiffstat.php  gai.pc.in  guide.php  guide_toc.php  header.php  help.md  home.php  (+26 more)
buttonmaker/: .anjuta_sym_db.db  Makefile.am  autogen.sh  configure.ac
buttonmaker/src/: Makefile.am  main.c  main.c~  pixmaps.h  wmgeneral.c  wmgeneral.h
fookb/: 1.xpm  2.xpm  3.xpm  4.xpm  ChangeLog  En.xpm  INSTALL  KNOWN_BUGS  LICENSE  Makefile.am  Makefile.in  README  README.russian.koi8-r  README.russian.utf-8  Ru.xpm  TODO  VERSION  autogen  beep_spring.au  boom.xpm  check.sh  configure  configure.ac  configure.in  copyright  fookb.1.in  fookb.1x  fookb.c  fookb.cf  fookb.desktop  fookb.h  globals.c  images.c  images.h  lat.xpm  opts.c  opts.h  params.c  params.h  rus.xpm  (+3 more)
libdockapp/: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen  configure  configure.ac  dockapp.pc
libdockapp/examples/: Makefile.am  Makefile.in  README
libdockapp/fonts/: Makefile.am  Makefile.in
libdockapp/src/: Makefile.am  Makefile.in  daargs.c  daargs.h  dacallback.c  dacolor.c  daevent.c  damain.c  dapixmap.c  darect.c  dashaped.c  dautil.c  dautil.h  dockapp.h  wmgeneral.c  wmgeneral.h
shermans_aquarium/: AUTHORS  ChangeLog  HACKING  INSTALL  README  TODO  XSCREENSAVER  config.h.in  configure  configure.in  shermans.xml
shermans_aquarium/aquarium/: COPYING.graphics
shermans_aquarium/shermans/: Makefile.in  aquarium.c  background.c  background.h  bottom.c  bubble.c  bubble.h  date.h  defines.h  fish.c  fish.h  grabscreen.c  images.c  leds.c  leds.h  matrix.h  over.c  plasma.c  plasma.h  pref.c  screensaver.h  settings.c  settings.h  soundeffects.c  soundeffects.h  status.h  status_darwin.c  status_darwin.h  status_freebsd.c  status_linux24.c  status_linux26.c  tetris.c  tetris.h  thermometer.c  thermometer.h  xmms_sn.c  xmms_sn.h
wmail/: .gitignore  COPYING  ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  README  configure  configure.ac  configure.in  wmailrc-sample
wmail/src/: Makefile.am  Makefile.in  common.c  common.h  config.c  config.h  wmail.c
wmbattery/: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.in  README  TODO  acpi.c  acpi.h  apm.h  autogen  battery_blink.xpm  battery_high.xpm  battery_low.xpm  battery_medium.xpm  battery_none.xpm  bigfont.xpm  charging.xpm  config.h.in  configure.ac  dial_bright.xpm  dial_dim.xpm  face.xpm  mask.xbm  mask_nodial.xbm  nocharging.xpm  plugged.xpm  simplehal.c  simplehal.h  smallfont.xpm  sonypi.c  sonypi.h  unplugged.xpm  upower.c  upower.h  wmbattery.1  wmbattery.1x  wmbattery.c  wmbattery.h
wmbattery/autoconf/: makeinfo.in
wmbattery/debian/: changelog  control  copyright  menu  rules
wmbiff/: .gitignore  AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  config.h.in  configure.ac
wmbiff/scripts/: Makefile.am  security.debian.rb
wmbiff/wmbiff/: Client.h  Imap4Client.c  Makefile.am  MessageList.c  MessageList.h  Pop3Client.c  ShellClient.c  charutil.c  charutil.h  gnutls-common.c  gnutls-common.h  maildirClient.c  mboxClient.c  passwordMgr.c  passwordMgr.h  regulo.c  regulo.h  sample.wmbiffrc  socket.c  test_tlscomm.c  test_wmbiff.c  tlsComm.c  tlsComm.h  wmbiff-classic-master-led.xpm  wmbiff.1  wmbiff.c  wmbiffrc.5  wmbiffrc.5.in
wmbiff/wmgeneral/: Makefile.am  list.c  list.h  misc.c  misc.h  wmgeneral.c  (+1 more)
wmcalc/: .wmcalc  .wmcalc.bk  .wmcalc.bkp  ChangeLog  Makefile  Makefile.am  README  backdrop.xpm  calcbuttons.xpm  charmap-colors.xpm  charmap.xpm  charmap_old.xpm  configure.ac  main.xpm  mask.xbm  readln.c  wmcalc.1  wmcalc.c  wmcalc.desktop  wmcalc1.xpm  wmcalc2.xpm  wmcalc3.xpm  wmcalc_c.h  wmcalc_err.h  wmcalc_f.h  wmcalc_g.h  wmcalc_t.h  wmcalc_x.h  wmcalcfunc.c  wmcalcscr.xpm  wmcalcscr2.xpm  wmcalcswitch.c
wmcdplay/: ARTWORK  ChangeLog  Imakefile  Makefile.am  README  cdctl.h  cdctl_freebsd.h  configure.ac  wmcdplay.1  wmcdplay.cc
wmclock/: .depend  COPYING  ChangeLog  INSTALL  Imakefile  Makefile.am  README  configure  configure.ac  dynlist.c  dynlist.h  month.xpm  weekday.xpm  wmclock.1.in  wmclock.c  wmclock.man  wmclock.man.in  wmclock.spec.in
wmcore/: .gitignore  ChangeLog  Makefile  Makefile.am  README  configure.ac  list.h  wmcore.1.in  wmcore.c  wmcore_mask.xbm  wmcore_master.xpm
wmcpuload/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  THANKS  TODO  config.h.in  configure  configure.ac
wmfsm/: AUTHORS  ChangeLog  ChangeLog.old  Makefile.am  Makefile.in  README  TODO  acconfig.h  config.h.in  configure  configure.ac  configure.in
wmget/: Makefile  Makefile.am  NEWS  README  TODO  cancel.c  config.def  configure.ac  configure.c  iq.c  list.c  messages.c  request.c  retrieve.c  server.c  usage.c  wmget-test.pl  wmget.1  wmget.1.in  wmget.c  wmget.h  wmget.refentry.xml  wmget.xpm
wmglobe/: .gitignore  CHANGES  Makefile  Makefile.am  Makefile.old  README  configure.ac  puzzle.sh  wmglobe.1
wmgtemp/: CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  README  TODO  configure.ac  wmgtemp.1
wmhdplop/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  devnames.c  devnames.h  dockapp_imlib2.c  dockapp_imlib2.h  gkrellm_hdplop.c  global.h  procstat.c  procstat.h  util.c  util.h  wmhdplop.1  wmhdplop.c  wmhdplop.desktop  wmhdplop.h
wmix/: .gitignore  AUTHORS  BUGS  INSTALL  Makefile  Makefile.am  NEWS  README  config.c  configure.ac  misc.c  mixer-alsa.c  mixer-oss.c  mmkeys.c  sample.wmixrc  ui_x.c  wmix.1x  wmix.c  wmix.desktop
wmlongrun/: AUTHORS  ChangeLog  INSTALL  MAKEDEV-cpuid-msr  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in
(+3082 files in other folders)
