dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/wmail.c)
AC_CONFIG_HEADERS(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for pkg-config modules.
PKG_CHECK_MODULES([X11], [x11])
PKG_CHECK_MODULES([dockapp], [dockapp])

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h strings.h sys/time.h)
CPPFLAGS_old="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS $dockapp_CFLAGS $X11_CFLAGS"
AC_CHECK_HEADER(dockapp.h)
CPPFLAGS="$CPPFLAGS_old"

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_FNMATCH
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strdup strstr memcpy)

dnl Checks for libraries.

dnl Enable Debugging?
AC_ARG_ENABLE(debug,
                [  --enable-debug	  enable debugging ],, enable_debug=no)
if test "$enable_debug" = yes; then
	CPPFLAGS="$CPPFLAGS -DDEBUG -D_XOPEN_SOURCE=600"
	CFLAGS="$CFLAGS -std=c99 -pedantic -Wall -Wextra -g"
fi

dnl Use delt's pixmaps instead of the default ones?
AC_ARG_ENABLE(delt_xpms,
                [  --enable-delt-xpms	  enable delt's pixmaps ],, enable_delt_xpms=no)
if test "$enable_delt_xpms" = yes; then
	CPPFLAGS="$CPPFLAGS -DUSE_DELT_XPMS"
fi

AC_OUTPUT(Makefile src/Makefile)
